--- a/INDEX/index.html
+++ b/INDEX/index.html
@@ -43,12 +43,12 @@
 <div class="section">
 
 <div class="titulo">
-  <h1> TITULO PERRON </h1>
+  <h1> Que la musica te tranforme </h1>
 
   <div class="wrap">
     <div class="search">
 
-      <input type="text" class="searchTerm" placeholder="Que la musica te libere">
+      <input type="text" class="searchTerm" placeholder="Que escuchas hoy?">
       <button type="submit" class="searchButton">
         <i class="fa fa-search"></i>
       </button>
@@ -56,8 +56,6 @@
   </div>
 
 </div>
-
-
 
 
         <div class="video-container">
@@ -72,44 +70,51 @@
     </div>
 
 
-    <div style="height:400px;width:100%">
-      <p>Que queres escuchar hoy?</p>
+    <div class="carrousel" style="height:400px;width:100%">
 
-      <!-- Slideshow container -->
-      <div class="slideshow-container">
+    </div>
 
-        <!-- Full-width images with number and caption text -->
-        <div class="mySlides fade">
-          <div class="numbertext">1 / 3</div>
-          <img src="tunestunes0.png" style="width:100%">
-          <div class="text">Caption Text</div>
-        </div>
 
-        <div class="mySlides fade">
-          <div class="numbertext">2 / 3</div>
-          <img src="img2.jpg" style="width:100%">
-          <div class="text">Caption Two</div>
-        </div>
 
-        <div class="mySlides fade">
-          <div class="numbertext">3 / 3</div>
-          <img src="img3.jpg" style="width:100%">
-          <div class="text">Caption Three</div>
-        </div>
+         <footer class="site-footer">
+           <div class="container">
+             <div class="row">
+               <div class="col-sm-12 col-md-6">
+                 <h6>Sobre nosotros</h6>
+                 <p class="text-justify">TUNESHUB <i>La musica deberia ser simple </i> Queremos llevar musica a todos los rincones del planeta de manera gratuita.</p>
+               </div>
 
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-      </div>
-      <br>
+               <div class="col-xs-6 col-md-3">
+                 <h6>Categorias</h6>
+                 <ul class="footer-links">
+                   <li><a href="../EXPLORAR/EXPLORAR.html">EXPLORAR</a></li>
+                   <li><a href="">PLAYLIST</a></li>
+                   <li><a href="../CONTACTO/CONTACTO.html">CONTACTO</a></li>
+                 </ul>
+               </div>
 
-      <!-- The dots/circles -->
-      <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-      </div>
 
+             </div>
+             <hr>
+           </div>
+           <div class="container">
+             <div class="row">
+               <div class="col-md-8 col-sm-6 col-xs-12">
+                 <p class="copyright-text">Hecho con ♥ en Digital House
+                 </p>
+               </div>
+               
+               <div class="col-md-4 col-sm-6 col-xs-12">
+                 <ul class="social-icons">
+                   <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                   <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                   <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+                   <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+                 </ul>
+               </div>
+             </div>
+           </div>
+     </footer>
 
 
 </body>
