--- a/INDEX/index.html
+++ b/INDEX/index.html
@@ -70,7 +70,41 @@
     </div>
 
 
-    <div class="carrousel" style="height:400px;width:100%">
+    <div class="carrousel" style="height:500px;width:100%">
+      <!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="jazz.jpg" style="width:100%">
+    <div class="text">Jazz</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="rock.jpg" style="width:100%">
+    <div class="text">Rock</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="electronica.jpg" style="width:100%">
+    <div class="text">Electronica</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
 
     </div>
 
@@ -103,7 +137,7 @@
                  <p class="copyright-text">Hecho con ♥ en Digital House
                  </p>
                </div>
-               
+
                <div class="col-md-4 col-sm-6 col-xs-12">
                  <ul class="social-icons">
                    <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
